added handlebar files and little bit a commented out code

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,14 @@
-10 
+
+    <h1>BRB Laptops</h1>
+    <p>Hello</p>
+<ul>
+  {{#each laptops}}
+    <li>
+      <p>
+        {{this.id}}. {{this.brand}}
+
+        
+      </p>
+    </li>
+  {{/each}}
+</ul>
