--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,14 +1,15 @@
-
-    <h1>BRB Laptops</h1>
-    <p>Hello</p>
+<h1>BRB Laptops</h1>
+<p>Hello</p>
 <ul>
-  {{#each laptops}}
-    <li>
-      <p>
-        {{this.id}}. {{this.brand}}
 
-        
-      </p>
-    </li>
+  {{#each lap}}
+  <li>
+    <p>
+      <p>{{id}}</p>
+    </p>
+  </li>
   {{/each}}
 </ul>
+
+
+{{!--  {{this.id}} --}}
