--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,13 +8,13 @@
     <meta name="BRB" content="">
 
     <title>Welcome</title>
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    {{!-- <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link href="css/gallery-dark-materialize.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> --}}
 </head>
 
 <body>
-        {{{ body }}}
+    {{{ body }}}
 </body>
 
 </html>
