--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
     <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a href="/">BUY</a></li>
-      <li><a href="sell.html">SELL</a></li>
+      <li><a href="/sell">SELL</a></li>
       {{!-- <li><a href="signup.html">Sign Up</a></li> --}}
 
     </ul>
@@ -36,7 +36,7 @@
 </nav>
 <ul class="sidenav" id="nav-mobile">
   <li class="active"><a href="index.html"><i class="material-icons">import_export</i>Buy</a></li>
-  <li><a href="sell.html"><i class="material-icons">attach_money</i>Sell</a></li>
+  <li><a href="/sell"><i class="material-icons">attach_money</i>Sell</a></li>
   {{!-- <li><a href="signup.html"><i class="material-icons">assignment_ind</i>Sign Up</a></li> --}}
 </ul>
 
