--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -5,11 +5,11 @@
         </div>
     </div>
     <div class="nav-wrapper container">
-        <a href="index.html" class="brand-logo"><i class="material-icons">desktop_windows</i>BRB</a>
+        <a href="/" class="brand-logo"><i class="material-icons">desktop_windows</i>BRB</a>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-            <li><a href="index.html">BUY</a></li>
-            <li><a href="sell.html">SELL</a></li>
+            <li><a href="/">BUY</a></li>
+            <li><a href="/sell">SELL</a></li>
         </ul>
         <!-- Dropdown Structure -->
 
@@ -21,35 +21,122 @@
     </div>
 </nav>
 <ul class="sidenav" id="nav-mobile">
-    <li class="active"><a href="index.html"><i class="material-icons">import_export</i>Buy</a></li>
-    <li><a href="sell.html"><i class="material-icons">attach_money</i>Sell</a></li>
+    <li class="active"><a href="/"><i class="material-icons">import_export</i>Buy</a></li>
+    <li><a href="/sell"><i class="material-icons">attach_money</i>Sell</a></li>
 </ul>
 <div class="container">
     <div class="row">
-        <form class="col s12">
+        <form class="col s12 formcolor">
             <div class="row">
                 <div class="input-field col s6">
-                    <input id="first_name" type="text" class="validate">
-                    <label for="first_name">First Name</label>
+                    <input id="name" type="text" class="validate">
+                    <label for="name">Full Name</label>
                 </div>
                 <div class="input-field col s6">
-                    <input id="last_name" type="text" class="validate">
-                    <label for="last_name">Last Name Initial</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="" type="password" class="validate">
-                    <label for="password">Password</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
                     <input id="email" type="email" class="validate">
                     <label for="email">Email</label>
                 </div>
             </div>
-            <button class="btn waves-effect black" type="submit" name="action">Submit
+            <div class="row">
+                <div class="input-field col s6">
+                    <input id="number" type="text" class="validate">
+                    <label for="number">Phone Number</label>
+                </div>
+                <div class="input-field col s6">
+                    <input id="city" type="text" class="validate">
+                    <label for="city">City</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s6">
+                    <input id="brand" type="text" class="validate">
+                    <label for="brand">Brand</label>
+                </div>
+                <div class="input-field col s6">
+                    <input id="model" type="text" class="validate">
+                    <label for="model">Model of Laptop</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s6">
+                    <select>
+                        <option value="" disabled selected>Choose your option</option>
+                        <option value="mac">Mac</option>
+                        <option value="windows">Windows</option>
+                    </select>
+                    <label>OPERATING SYSTEM</label>
+                </div>
+                <div class="input-field col s6">
+                    <select>
+                        <option value="" disabled selected>Choose your option</option>
+                        <option value="laptop_condition1">1</option>
+                        <option value="laptop_condition2">2</option>
+                        <option value="laptop_condition3">3</option>
+                        <option value="laptop_condition4">4</option>
+                        <option value="laptop_condition5">5</option>
+                    </select>
+                    <label>Condition of Laptop</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s6">
+                    <input id="processor" type="text" class="validate">
+                    <label for="processor">Processor</label>
+                </div>
+                <div class="input-field col s6">
+                    <input id="graphics" type="text" class="validate">
+                    <label for="graphics">Graphics Card</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s6">
+                    <input id="ram" type="text" class="validate">
+                    <label for="ram">Ram</label>
+                </div>
+                <div class="input-field col s6">
+                    <input id="screen" type="text" class="validate">
+                    <label for="screen">Screen Dimension</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s6">
+                    <input id="storage" type="text" class="validate">
+                    <label for="storage">Storage</label>
+                </div>
+                <div class="input-field col s6">
+                    <input id="year" type="text" class="validate">
+                    <label for="year">Year Released</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s6">
+                    <textarea id="summary" class="materialize-textarea"></textarea>
+                    <label for="summary">Summary</label>
+                </div>
+                <div class="input-field col s6">
+                    <input id="price" type="text" class="validate">
+                    <label for="price">How much would you like for this computer?</label>
+                </div>
+            </div>
+            <div class="file-field input-field">
+                <div class="btn">
+                    <span>Main Picture</span>
+                    <input type="file">
+                </div>
+                <div class="file-path-wrapper">
+                    <input id="mainphoto" class="file-path validate" type="text">
+                </div>
+            </div>
+            <div class="file-field input-field">
+                <div class="btn">
+                    <span>Additional Photos?</span>
+                    <input type="file" multiple>
+                </div>
+                <div class="file-path-wrapper">
+                    <input id="additionalPhotos" class="file-path validate" type="text" placeholder="Upload more files">
+                </div>
+            </div>
+            <button class="btn waves-effect" type="submit" name="action">Submit
                 <i class="material-icons right">send</i>
             </button>
         </form>
