--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -26,7 +26,7 @@
 </ul>
 <div class="container">
     <div class="row">
-        <form class="col s12 formcolor">
+        <form id="newLaptop" class="col s12 formcolor">
             <div class="row">
                 <div class="input-field col s6">
                     <input id="name" type="text" class="validate">
@@ -59,7 +59,7 @@
             </div>
             <div class="row">
                 <div class="input-field col s6">
-                    <select>
+                    <select id="os">
                         <option value="" disabled selected>Choose your option</option>
                         <option value="mac">Mac</option>
                         <option value="windows">Windows</option>
@@ -67,13 +67,13 @@
                     <label>OPERATING SYSTEM</label>
                 </div>
                 <div class="input-field col s6">
-                    <select>
-                        <option value="" disabled selected>Choose your option</option>
-                        <option value="laptop_condition1">1</option>
-                        <option value="laptop_condition2">2</option>
-                        <option value="laptop_condition3">3</option>
-                        <option value="laptop_condition4">4</option>
-                        <option value="laptop_condition5">5</option>
+                    <select></select>
+                    <option value="" disabled selected>Choose your option</option>
+                    <option value="laptop_condition1">1</option>
+                    <option value="laptop_condition2">2</option>
+                    <option value="laptop_condition3">3</option>
+                    <option value="laptop_condition4">4</option>
+                    <option value="laptop_condition5">5</option>
                     </select>
                     <label>Condition of Laptop</label>
                 </div>
