tiny changes to sell

--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -61,19 +61,19 @@
                 <div class="input-field col s6">
                     <select id="os">
                         <option value="" disabled selected>Choose your option</option>
-                        <option value="mac">Mac</option>
-                        <option value="windows">Windows</option>
+                        <option value="mac">mac</option>
+                        <option value="windows">windows</option>
                     </select>
                     <label>OPERATING SYSTEM</label>
                 </div>
                 <div class="input-field col s6">
                     <select></select>
-                    <option value="" disabled selected>Choose your option</option>
-                    <option value="laptop_condition1">1</option>
-                    <option value="laptop_condition2">2</option>
-                    <option value="laptop_condition3">3</option>
-                    <option value="laptop_condition4">4</option>
-                    <option value="laptop_condition5">5</option>
+                    <option value="" selected> Choose your option</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
                     </select>
                     <label>Condition of Laptop</label>
                 </div>
