--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -67,13 +67,13 @@
                     <label>OPERATING SYSTEM</label>
                 </div>
                 <div class="input-field col s6">
-                    <select></select>
-                    <option value="" selected> Choose your option</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
+                    <select>
+                        <option value="" selected> Choose your option</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
                     </select>
                     <label>Condition of Laptop</label>
                 </div>
