jquery pull data from form

--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -67,7 +67,7 @@
                     <label>OPERATING SYSTEM</label>
                 </div>
                 <div class="input-field col s6">
-                    <select>
+                    <select id="condition">
                         <option value="" selected> Choose your option</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
