--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -140,5 +140,6 @@
                 <i class="material-icons right">send</i>
             </button>
         </form>
+        {{!-- ADD A SOLD BUTTON TO THE CARDS --}}
     </div>
 </div>
