added icons ... again , and added some formatting to the cards

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -52,11 +52,11 @@
               alt="placeholder">
           </a>
           <div class="gallery-header grey">
-            <span>{{this.brand}}</span>
+            <span>{{this.model}}</span>
           </div>
           <div class="gallery-body">
             <div class="title-wrapper">
-              <h3>{{this.brand}}</h3>
+              <h3>{{this.model}}</h3>
               <span class="price">${{this.price}}</span>
             </div>
             <ul>
@@ -64,6 +64,7 @@
               <li>{{this.processor}}</li>
               <li>{{this.ram}}GB RAM</li>
               <li>{{this.hd_storage}} Storage</li>
+              <li>{{this.brand}} Operating system</li>
             </ul>
             <p class="description">{{this.summary}}</p>
 
