--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -15,7 +15,7 @@
 
 
         <div class="nav-header center">
-            <h1 class="signupheader">SIGN UP!</h1>
+            <h1 class="signupheader">The Form!</h1>
             <div class="tagline signuptag">We'd love to help you, but we'll BRB.</div>
         </div>
     </div>
@@ -29,20 +29,24 @@
         <form id="newLaptop" class="col s12 formcolor">
             <div class="row">
                 <div class="input-field col s6">
+                    <i class="material-icons prefix">account_box</i>
                     <input id="name" type="text" class="validate">
                     <label for="name">Full Name</label>
                 </div>
                 <div class="input-field col s6">
+                    <i class="material-icons prefix">contact_mail</i>
                     <input id="email" type="email" class="validate">
                     <label for="email">Email</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s6">
+                    <i class="material-icons prefix">local_phone</i>
                     <input id="number" type="text" class="validate">
                     <label for="number">Phone Number</label>
                 </div>
                 <div class="input-field col s6">
+                    <i class="material-icons prefix">location_city</i>
                     <input id="city" type="text" class="validate">
                     <label for="city">City</label>
                 </div>
@@ -60,7 +64,7 @@
             <div class="row">
                 <div class="input-field col s6">
                     <select id="os">
-                        <option value="" disabled selected>Choose your option</option>
+                        <option value="" selected>Choose your option</option>
                         <option value="mac">mac</option>
                         <option value="windows">windows</option>
                     </select>
@@ -110,10 +114,12 @@
             </div>
             <div class="row">
                 <div class="input-field col s6">
+                    <i class="material-icons prefix">message</i>
                     <textarea id="summary" class="materialize-textarea"></textarea>
                     <label for="summary">Summary</label>
                 </div>
                 <div class="input-field col s6">
+                    <i class="material-icons prefix">attach_money</i>
                     <input id="price" type="text" class="validate">
                     <label for="price">How much would you like for this computer?</label>
                 </div>
@@ -124,7 +130,7 @@
                     <input type="file">
                 </div>
                 <div class="file-path-wrapper">
-                    <input id="mainphoto" class="file-path validate" type="text">
+                    <input id="mainphoto" class="file-path validate" type="text" placeholder="<--- Click here">
                 </div>
             </div>
             <div class="file-field input-field">
@@ -133,7 +139,7 @@
                     <input type="file" multiple>
                 </div>
                 <div class="file-path-wrapper">
-                    <input id="additionalPhotos" class="file-path validate" type="text" placeholder="Upload more files">
+                    <input id="additionalPhotos" class="file-path validate" type="text" placeholder="<--- Click here">
                 </div>
             </div>
             <button class="btn waves-effect" type="submit" name="action">Submit
