added firebase to html

--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -127,7 +127,7 @@
             <div class="file-field input-field">
                 <div class="btn">
                     <span>Main Picture</span>
-                    <input type="file">
+                    <input type="file" value="upload" id="mainPictureButton">
                 </div>
                 <div class="file-path-wrapper">
                     <input id="mainphoto" class="file-path validate" type="text" placeholder="<--- Click here">
@@ -136,7 +136,7 @@
             <div class="file-field input-field">
                 <div class="btn">
                     <span>Additional Photos?</span>
-                    <input type="file" multiple>
+                    <input type="file" value="upload" id="secondaryPictureButton" multiple>
                 </div>
                 <div class="file-path-wrapper">
                     <input id="additionalPhotos" class="file-path validate" type="text" placeholder="<--- Click here">
