--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,14 +23,20 @@
 <script src="js/masonry.pkgd.min.js"></script>
 <script src="js/materialize.min.js"></script>
 <script src="js/color-thief.min.js"></script>
+
 <script src="js/galleryExpand.js"></script>
 <script src="js/init.js"></script>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
 
+
+<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-storage.js"></script>
+
+
 
 <script>
     // Your web app's Firebase configuration
@@ -47,6 +53,48 @@
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     firebase.analytics();
+
+
+
+    var mainPictureButton = document.getElementById("mainPictureButton");
+    var uploader = document.getElementById("uploader");
+
+    // const storageService = firebase.storage();
+    // const storageRef = storageService.ref();
+
+    mainPictureButton.addEventListener("change", function (e) {
+
+        console.log(e.target.files[0].name)
+        // get file
+        var file = e.target.files[0];
+
+
+        // create a storage ref
+        var storageRef = firebase.storage().ref("images/" + file.name);
+
+        //  upload file
+        var task = storageRef.put(file);
+
+        // update progress bar
+        task.on('state_changed',
+            function progress(snapshot) {
+                var percentage = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+                uploader.value = percentage;
+            },
+
+            function error(err) {
+
+            },
+
+            function complete() {
+
+
+            })
+
+    })
+
+
 </script>
+
 
 </html>
