--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -57,10 +57,14 @@
 
 
     var mainPictureButton = document.getElementById("mainPictureButton");
+    var secondaryPictureButton = document.getElementById("secondaryPictureButton");
     var uploader = document.getElementById("uploader");
+    var secondaryUploader = document.getElementById("secondaryUploader")
 
-    // const storageService = firebase.storage();
-    // const storageRef = storageService.ref();
+
+
+
+
 
     mainPictureButton.addEventListener("change", function (e) {
 
@@ -80,6 +84,37 @@
             function progress(snapshot) {
                 var percentage = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
                 uploader.value = percentage;
+            },
+
+            function error(err) {
+
+            },
+
+            function complete() {
+
+
+            })
+
+    })
+
+    secondaryPictureButton.addEventListener("change", function (e) {
+
+        console.log(e.target.files[0].name)
+        // get file
+        var file = e.target.files[0];
+
+
+        // create a storage ref
+        var storageRef = firebase.storage().ref("secondaryimages/" + file.name);
+
+        //  upload file
+        var task = storageRef.put(file);
+
+        // update progress bar
+        task.on('state_changed',
+            function progress(snapshot) {
+                var percentage = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+                secondaryUploader.value = percentage;
             },
 
             function error(err) {
