--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,104 +35,7 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-storage.js"></script>
-
-
-
-<script>
-    // Your web app's Firebase configuration
-    var firebaseConfig = {
-        apiKey: "AIzaSyByHflVSt-95YP4yWECkiK6vLGTguS7KFU",
-        authDomain: "future-force-270416.firebaseapp.com",
-        databaseURL: "https://future-force-270416.firebaseio.com",
-        projectId: "future-force-270416",
-        storageBucket: "future-force-270416.appspot.com",
-        messagingSenderId: "397427626203",
-        appId: "1:397427626203:web:e353a58a74c91413f6bcfe",
-        measurementId: "G-H126PY4SSJ"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
-
-
-
-    var mainPictureButton = document.getElementById("mainPictureButton");
-    var secondaryPictureButton = document.getElementById("secondaryPictureButton");
-    var uploader = document.getElementById("uploader");
-    var secondaryUploader = document.getElementById("secondaryUploader")
-
-
-
-
-
-
-    mainPictureButton.addEventListener("change", function (e) {
-
-        console.log(e.target.files[0].name)
-        // get file
-        var file = e.target.files[0];
-
-
-        // create a storage ref
-        var storageRef = firebase.storage().ref("images/" + file.name);
-
-        //  upload file
-        var task = storageRef.put(file);
-
-        // update progress bar
-        task.on('state_changed',
-            function progress(snapshot) {
-                var percentage = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-                uploader.value = percentage;
-            },
-
-            function error(err) {
-
-            },
-
-            function complete() {
-                var URL = task.snapshot.ref.getDownloadURL().then(function (downloadURL) { console.log(downloadURL) })
-                return URL;
-
-            })
-
-    })
-
-    secondaryPictureButton.addEventListener("change", function (e) {
-
-        console.log(e.target.files[0].name)
-        // get file
-        var file = e.target.files[0];
-
-
-        // create a storage ref
-        var storageRef = firebase.storage().ref("secondaryimages/" + file.name);
-
-        //  upload file
-        var task = storageRef.put(file);
-
-        // update progress bar
-        task.on('state_changed',
-            function progress(snapshot) {
-                var percentage = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-                secondaryUploader.value = percentage;
-            },
-
-            function error(err) {
-
-            },
-
-            function complete() {
-
-                var secondaryURL = task.snapshot.ref.getDownloadURL().then(function (downloadURL) { console.log(downloadURL) })
-                return secondaryURL;
-
-            })
-
-    })
-
-
-</script>
+<script src="../js/firebase.js"></script>
 
 
 </html>
