everything works right now

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -47,9 +47,7 @@
       <div class="col l4 m6 s12 gallery-item gallery-expand gallery-filter {{this.operating_system}}">
         <div class="gallery-curve-wrapper">
           <a class="gallery-cover gray">
-            <img class="responsive-img"
-              src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fblogs-images.forbes.com%2Fbrookecrothers%2Ffiles%2F2016%2F10%2F2016-macbook-pro-small.jpg"
-              alt="placeholder">
+            <img class="responsive-img" src="{{this.main_photo}}" alt="placeholder">
           </a>
           <div class="gallery-header grey">
             <span>{{this.model}}</span>
