commented out multi photo button and carousel

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -69,7 +69,7 @@
 
 
 
-            <div class="carousel-wrapper">
+            {{!-- <div class="carousel-wrapper">
               <div class="carousel">
                 <a class="carousel-item" href="#one!"><img
                     src="https://cnet3.cbsistatic.com/img/Uua9z5yXya01a9T0ERRwjdie3qg=/2019/11/12/84e1159c-b8cb-4349-9e3b-3c37cc78945f/36-macbook-pro-16-inch.jpg"></a>
@@ -82,7 +82,7 @@
                 <a class="carousel-item" href="#five!"><img
                     src="https://venturebeat.com/wp-content/uploads/2016/12/MacBook-Pro-2016-ODonnell-04-e1551720273342.jpg?fit=1838%2C1034&strip=all"></a>
               </div>
-            </div>
+            </div> --}}
             <ul>
               <li>{{this.name}}</li>
               <li>Near {{this.city}}</li>
