--- a/views/sell.handlebars
+++ b/views/sell.handlebars
@@ -137,7 +137,7 @@
                 </div>
                 <progress value="0" max="100" id="uploader">0%</progress>
             </div>
-            <div class="file-field input-field">
+            {{!-- <div class="file-field input-field">
                 <div class="btn">
                     <span>Additional Photos?</span>
                     <input type="file" value="upload" id="secondaryPictureButton" multiple>
@@ -146,7 +146,7 @@
                     <input id="additionalPhotos" class="file-path validate" type="text" placeholder="<--- Click here">
                 </div>
                 <progress value="0" max="100" id="secondaryUploader">0%</progress>
-            </div>
+            </div> --}}
             <button class="btn waves-effect" type="submit" name="action">Submit
                 <i class="material-icons right">send</i>
             </button>
