changed structures index

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -58,11 +58,11 @@
               <span class="price">${{this.price}}</span>
             </div>
             <ul>
-              <li>{{this.release_year}}</li>
-              <li>{{this.processor}}</li>
-              <li>{{this.ram}}GB RAM</li>
-              <li>{{this.hd_storage}} Storage</li>
-              <li>{{this.brand}} Operating system</li>
+              <li>Brand: {{this.brand}}</li>
+              <li>Year: {{this.release_year}}</li>
+              <li>Processor: {{this.processor}}</li>
+              <li>Ram: {{this.ram}}</li>
+              <li>Storage: {{this.hd_storage}}</li>
             </ul>
             <p class="description">{{this.summary}}</p>
 
